--- a/crop.html
+++ b/crop.html
@@ -33,51 +33,44 @@
 
     </nav>
     <section class="container">
-        <form class="form_container">
+        <form class="form_container" id="crop-form">
                 <div class="input_container">
-                    <label for="name">Nitrogen</label>
-                    <input type="text" name="name" id="name" placeholder="Enter the value">
+                    <label for="nitrogen">Nitrogen</label>
+                    <input type="text" name="nitrogen" id="nitrogen" placeholder="Enter the value">
                 </div>
 
                 <div class="input_container">
-                    <label for="name">Phosphorus</label>
-                    <input type="text" name="name" id="name" placeholder="Enter the value">
+                    <label for="phodphorus">Phosphorus</label>
+                    <input type="text" name="phosphorus" id="phosphorus" placeholder="Enter the value">
                 </div>
 
                 <div class="input_container">
-                    <label for="name">Potassium</label>
-                    <input type="text" name="name" id="name" placeholder="Enter the value">
+                    <label for="potassium">Potassium</label>
+                    <input type="text" name="potassium" id="potassium" placeholder="Enter the value">
                 </div>
 
                 <div class="input_container">
-                    <label for="name">pH Level</label>
-                    <input type="text" name="name" id="name" placeholder="Enter the value">
+                    <label for="ph">pH Level</label>
+                    <input type="text" name="ph" id="ph" placeholder="Enter the value">
                 </div>
 
                 
                 <div class="input_container">
-                    <label for="name">Rainfall (in mm)</label>
-                    <input type="text" name="name" id="name" placeholder="Enter the value">
+                    <label for="rainfall">Rainfall (in mm)</label>
+                    <input type="text" name="rainfall" id="rainfall" placeholder="Enter the value">
                 </div>
 
 
                 <!-- states -->
                 <div class="input_container">
-                    <label for="name">State</label>
+                    <label for="state">State</label>
                     <select name="state" id="state" class="form-control" >
-                        <option selected value="Select State">Select State</option>
-                        <option value="Andhra Pradesh">Andhra Pradesh</option>
-                        <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
+                        <option value="SelectState">Select State</option>
+                        <option value="Andra Pradesh">Andra Pradesh</option>
                         <option value="Arunachal Pradesh">Arunachal Pradesh</option>
                         <option value="Assam">Assam</option>
                         <option value="Bihar">Bihar</option>
-                        <option value="Chandigarh">Chandigarh</option>
                         <option value="Chhattisgarh">Chhattisgarh</option>
-                        <option value="Dadar and Nagar Haveli">Dadar and Nagar Haveli</option>
-                        <option value="Daman and Diu">Daman and Diu</option>
-                        <option value="Delhi">Delhi</option>
-                        <option value="Lakshadweep">Lakshadweep</option>
-                        <option value="Puducherry">Puducherry</option>
                         <option value="Goa">Goa</option>
                         <option value="Gujarat">Gujarat</option>
                         <option value="Haryana">Haryana</option>
@@ -86,31 +79,51 @@
                         <option value="Jharkhand">Jharkhand</option>
                         <option value="Karnataka">Karnataka</option>
                         <option value="Kerala">Kerala</option>
-                        <option value="Madhya Pradesh">Madhya Pradesh</option>
+                        <option value="Madya Pradesh">Madya Pradesh</option>
                         <option value="Maharashtra">Maharashtra</option>
                         <option value="Manipur">Manipur</option>
                         <option value="Meghalaya">Meghalaya</option>
                         <option value="Mizoram">Mizoram</option>
                         <option value="Nagaland">Nagaland</option>
-                        <option value="Odisha">Odisha</option>
+                        <option value="Orissa">Orissa</option>
                         <option value="Punjab">Punjab</option>
                         <option value="Rajasthan">Rajasthan</option>
                         <option value="Sikkim">Sikkim</option>
                         <option value="Tamil Nadu">Tamil Nadu</option>
                         <option value="Telangana">Telangana</option>
                         <option value="Tripura">Tripura</option>
+                        <option value="Uttaranchal">Uttarakhand</option>
                         <option value="Uttar Pradesh">Uttar Pradesh</option>
-                        <option value="Uttarakhand">Uttarakhand</option>
                         <option value="West Bengal">West Bengal</option>
-                        </select>
+                        <option disabled style="background-color:#aaa; color:#fff">UNION Territories</option>
+                        <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
+                        <option value="Chandigarh">Chandigarh</option>
+                        <option value="Dadar and Nagar Haveli">Dadar and Nagar Haveli</option>
+                        <option value="Daman and Diu">Daman and Diu</option>
+                        <option value="Delhi">Delhi</option>
+                        <option value="Lakshadeep">Lakshadeep</option>
+                        <option value="Pondicherry">Pondicherry</option>
+                      </select>
                 </div>
-
+                <div class="input_container"style="margin-top: 10px;">
+                    <label for="inputDistrict">District</label>
+                    <select class="form-control" id="inputDistrict">
+                        <option value="">-- select one -- </option>
+                    </select>
                 <div class="input_container">
                     <button type="submit"class="btn">Predict</button>
                 </div>
         </form>
     </section>
 
+    <!-- jquery code -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
     <script src="app.js"></script>
 </body>
