--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,8 @@
     <!-- navbar -->
     <nav>
       <div>
-          <h1 class="logo">Algo<span>Farm</span></h1>
+          <h1 class="logo">Algo<span>Farm</span>
+          </h1>
       </div>
       <ul class="nav_links">
           <li><a href="index.html">Home</a></li>
@@ -31,11 +32,20 @@
           <li><a href="/frontend/fertiliser.html">Fertiliser</a></li>
           <li><a href="/frontend/disease.html">Disease</a></li>
           <li><a href="/frontend/blog.html">Blog</a></li>
-          
+          <li><button type="toggle" class="toggle-btn"><i class="fa-solid fa-moon"></i></button></li>
+          <li>
+              <!-- applying google translation to whole page -->
+              <div id="google_translate_element"></div>
+              <script type="text/javascript">
+                  function googleTranslateElementInit() {
+                      new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+                  }
+              </script>
+              <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+          </li>
       </ul>
 
-    </nav>
-
+  </nav>
 
     <!-- blog -->
     <section class="news">
