--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 
 </head>
 <body>
-    <main style="height: 100vh; width: 100%;">
+    <main style="height: 100vh; width: 100%; background: url(./assets/background.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    z-index: 2;">
     <!-- navbar -->
     <nav>
         <div>
@@ -124,7 +129,7 @@
                 <div class="row_content">
                     <h3> Crop Recommendation for farmers</h3>
                     <p>Our system will recommend the best crop to grow in a particular area based on the soil type, climate, and other factors.</p>
-                    <a href="/frontend/crop.html" class="predict_btn">Predict Now <span style="padding: 0 5px;"><i class="fa-solid fa-arrow-right"></i></span> </a>
+                    <a href="/frontend/crop.html" class="predict_btn service_btn">Predict Now <span style="padding: 0 5px;"><i class="fa-solid fa-arrow-right"></i></span> </a>
                 </div>
                 <div class="row_img">
                     <img src="./assets/crop.png" alt="crop">
@@ -139,7 +144,7 @@
                 <div class="row_content">
                     <h3>Fertliser Recommendation</h3>
                     <p>Our system will recommend the best crop to grow in a particular area based on the soil type, climate, and other factors.</p>
-                    <a href="/frontend/crop.html" class="predict_btn">Predict Now <span style="padding: 0 5px;"><i class="fa-solid fa-arrow-right"></i></span> </a>
+                    <a href="/frontend/crop.html" class="predict_btn service_btn">Predict Now <span style="padding: 0 5px;"><i class="fa-solid fa-arrow-right"></i></span> </a>
                 </div>
                 
             </div>
@@ -150,7 +155,7 @@
                 <div class="row_content">
                     <h3>Disease Prediction</h3>
                     <p>Our system will recommend the best crop to grow in a particular area based on the soil type, climate, and other factors.</p>
-                    <a href="/frontend/crop.html" class="predict_btn">Predict Now <span style="padding: 0 5px;"><i class="fa-solid fa-arrow-right"></i></span> </a>
+                    <a href="/frontend/crop.html" class="predict_btn service_btn">Predict Now <span style="padding: 0 5px;"><i class="fa-solid fa-arrow-right"></i></span> </a>
                 </div>
                 <div class="row_img">
                     <img src="./assets/disease.png" alt="crop">
