--- a/disease.html
+++ b/disease.html
@@ -29,16 +29,29 @@
     <!-- navbar -->
     <nav>
       <div>
-        <h1 class="logo">Algo<span>Farm</span></h1>
+          <h1 class="logo">Algo<span>Farm</span>
+          </h1>
       </div>
       <ul class="nav_links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="/frontend/crop.html">Crop</a></li>
-        <li><a href="/frontend/fertiliser.html">Fertiliser</a></li>
-        <li><a href="/frontend/disease.html">Disease</a></li>
-        <li><a href="/frontend/blog.html">Blog</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="/frontend/crop.html">Crop</a></li>
+          <li><a href="/frontend/fertiliser.html">Fertiliser</a></li>
+          <li><a href="/frontend/disease.html">Disease</a></li>
+          <li><a href="/frontend/blog.html">Blog</a></li>
+          <li><button type="toggle" class="toggle-btn"><i class="fa-solid fa-moon"></i></button></li>
+          <li>
+              <!-- applying google translation to whole page -->
+              <div id="google_translate_element"></div>
+              <script type="text/javascript">
+                  function googleTranslateElementInit() {
+                      new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+                  }
+              </script>
+              <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+          </li>
       </ul>
-    </nav>
+
+  </nav>
     <!-- form section -->
     <section class="container">
       <form class="form_container" id="disease-form">
@@ -47,7 +60,9 @@
           <label for="name">Upload the Image of the crop</label>
           <input type="file" accept="image/*" onchange="getImg(this.value);"/>
         </div>
-        <div class="input_container" id="imageData"></div>
+        <div class="input_container" id="imageData">
+
+        </div>
         <div class="input_container">
           <button type="submit" class="btn">Predict</button>
         </div>
@@ -58,8 +73,15 @@
 
       // getting img data
       function getImg(imgImage) {
+        // firstly clear the local storage
+        localStorage.clear();
+
+
+          var newImg = imgImage.replace("C:\\fakepath\\", "assets/");
         const imageData = document.querySelector("#imageData");
-        imageData.innerHTML = `<img src="${imgImage}" alt="image" />`;
+        imageData.innerHTML = `<img src="${newImg}" alt="image" />`;
+        
+        localStorage.setItem('disdata',newImg);
       }
 
       // image upload and prediction
@@ -68,16 +90,21 @@
       form.addEventListener("submit", async (e) => {
         e.preventDefault();
 
-        // get the image file from the input
-        const fileInput = document.querySelector('input[type="file"]');
-        const file = fileInput.files[0];
+        // // get the image file from the input
+        // const fileInput = document.querySelector('input[type="file"]');
+        // const file = fileInput.files[0];
 
-        console.log(file);
-        // create a new form data object and append the file to it
-        const formData = new FormData();
-        formData.append("image", file);
+        // console.log(file);
+        // // create a new form data object and append the file to it
+        // const formData = new FormData();
+        // formData.append("image", file);
 
-        console.log(formData);
+
+
+        // console.log(formData);
+        // localStorage.setItem('disdata',formData);
+
+        window.location.href = 'diseaseresult.html';
 
         // // send the form data to the backend using a POST request
         // const response = await fetch('/api/predict', {
@@ -89,6 +116,19 @@
         // const data = await response.json();
         // console.log(data);
       });
+
+      const icon = document.querySelector('.toggle-btn');
+
+
+// dark mode toggle
+icon.addEventListener('click', () => {
+    document.body.classList.toggle('dark-theme');
+    if (document.body.classList.contains('dark-theme')) {
+        icon.innerHTML = '<i class="fas fa-sun"></i>';
+    } else {
+        icon.innerHTML = '<i class="fas fa-moon"></i>';
+    }
+});
     </script>
   </body>
 </html>
